--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "sockjs-client": "1.1.1",
     "stomp-websocket": "2.3.4",
     "swagger-ui": "2.1.4",
-    "angular-toggle-switch": "^1.3.0"
+    "angular-toggle-switch": "^1.3.0",
+	"quill":"1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.5"
